# LSO-Multi-Chat

./: CMakeLists.txt  README.md  netprotocolmessages  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/snesnopic/ermes/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/snesnopic/ermes/: ChatActivity.java  Connessione.java  CreateGroupActivity.java  Group.java  GroupHolder.java  GroupWithRequestHolder.java  GroupsAdapter.java  GroupsWithRequestsAdapter.java  LoginActivity.java  MainActivity.java  Message.java  MessageAdapter.java  MyGroupsFragment.java  MyMessageHolder.java  NonScrollListView.java  TabAdapter.java  (+5 more)
app/src/main/res/anim/: from_bottom_anim.xml  rotate_close_anim.xml  rotate_open_anim.xml  to_bottom_anim.xml
app/src/main/res/layout/: activity_main.xml  chat_activity.xml  create_group_activity.xml  create_group_dialog.xml  fragment_groupswithrequests.xml  fragment_mygroups.xml  fragment_othergroups.xml  fragment_requests.xml  listactivity_row_group.xml  listactivity_row_groupwithrequests.xml  listactivity_row_mymessage.xml  listactivity_row_othersmessage.xml  listactivity_row_requestsofgroup.xml  login_activity.xml  settings_dialog.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/datapkg/: User.java
db/: LSO_DB.mdj  README.md  ermesChatDB.sql
gradle/wrapper/: gradle-wrapper.properties
java/: Client.java  Server.java
server/: build.sh  group.c  group.h  pgconnection.c  pgconnection.h  server.c  user.c  user.h
(+37 files in other folders)
